2009-11-16  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom53_mul.c: Use addlsh2 for evaluation.(and fix typo)
	* mpn/generic/toom_eval_dgr3_pm2.c: Likewise (affects toom44 and 43).

2009-11-15  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/aorrlsh2_n.asm: New file.
	* configure.in: Add support for addlsh2_n, sublsh2_n, and rsblsh2_n,
	including mulfuncs.
	* gmp-impl.h (mpn_addlsh2_n, mpn_sublsh2_n, mpn_rsblsh2_n): Declare.
	* mpn/asm-defs.m4: Likewise.

	* mpn/generic/copyi.c: New file.
	* mpn/generic/copyd.c: Likewise.
	* mpn/generic/zero.c: Likewise.
	* gmp-h.in: Declare new functions.
	* configure.in (gmp_mpn_functions): Add new functions.

2009-11-15  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/mulmod_bnm1.c (mpn_mulmod_bnm1_next_size): fix typo

	* mpn/generic/toom33_mul.c: Use rsblsh1 for evaluation.
	* mpn/generic/toom3_sqr.c: Likewise.

2009-11-14  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/toom52_mul.c: Use mpn_addlsh1_n.

	* mpn/generic/toom52_mul.c: Toggle the right flag bit in an
	HAVE_NATIVE_mpn_add_n_sub_n arm.

	* tests/mpz/t-remove.c: New file.

	* mpn/generic/remove.c: Major overhaul.  Add parameter 'cap'.

	* mpn/generic/binvert.c: Fix typo in last change.

	* mpn/generic/bdiv_qr.c: Make it actually work.  Also use passed-in
	scratch space.

	* mpn/generic/mu_bdiv_qr.c: Reset FFT parameters for each call.

2009-11-12  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/k7/gcd_1.asm (MASK): Compute from MAXSHIFT.

2009-11-11  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/binvert.c: Simplify, fix comments.

	* tests/devel/try.c: Test mpn_invert and mpn_binvert.

	* tests/refmpn.c (refmpn_invert, refmpn_binvert): New functions.
	* tests/tests.h: Declare new functions.

2009-11-10  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in: Supply compiler options for atom in 32-bit mode.

	* acinclude.m4 (X86_64_PATTERN): New.
	* configure.in: Setup and use X86_64_PATTERN.

	* mpn/x86_64/fat/fat.c: New file.